--- a/frontend_orbital/package.json
+++ b/frontend_orbital/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.1.5",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.58",
     "@material-ui/styles": "^4.11.3",
     "@material/top-app-bar": "^10.0.0",
     "@mui-treasury/components": "^1.10.1",
