--- a/frontend_orbital/package.json
+++ b/frontend_orbital/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.1.5",
+    "@fullcalendar/daygrid": "^5.8.0",
+    "@fullcalendar/interaction": "^5.8.0",
+    "@fullcalendar/list": "^5.8.0",
+    "@fullcalendar/react": "^5.8.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
@@ -12,6 +16,8 @@
     "@mui-treasury/components": "^1.10.1",
     "@mui-treasury/styles": "^1.13.1",
     "axios": "^0.21.1",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-alert": "^7.0.2",
@@ -21,10 +27,12 @@
     "react-dropdown-date": "^2.2.4",
     "react-hook-form": "^7.6.8",
     "react-icons": "^4.2.0",
+    "react-linkify": "^1.0.0-alpha",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-spinners": "^0.10.6",
     "react-square-payment-form": "^0.7.2",
+    "react-textarea-autosize": "^8.3.3",
     "react-transition-group": "^4.4.1",
     "web-vitals": "^1.1.0"
   },
