--- a/frontend_orbital/package.json
+++ b/frontend_orbital/package.json
@@ -8,6 +8,7 @@
     "@fullcalendar/interaction": "^5.8.0",
     "@fullcalendar/list": "^5.8.0",
     "@fullcalendar/react": "^5.8.0",
+    "@fullcalendar/timegrid": "^5.8.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
