--- a/frontend_orbital/package.json
+++ b/frontend_orbital/package.json
@@ -17,6 +17,7 @@
     "@mui-treasury/components": "^1.10.1",
     "@mui-treasury/styles": "^1.13.1",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
