--- a/frontend_orbital/package.json
+++ b/frontend_orbital/package.json
@@ -18,6 +18,7 @@
     "@mui-treasury/styles": "^1.13.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "clsx": "^1.1.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
